fixed line break in nav menu

--- a/styles/base.css
+++ b/styles/base.css
@@ -72,5 +72,5 @@ footer {
 a, a:link, a:active {
   text-decoration: none;
   color: #555;
-  padding: 1em;
+  padding: .2em;
 }
