--- a/styles/module.css
+++ b/styles/module.css
@@ -41,7 +41,7 @@
 
 .main-nav a {
   font-variant: small-caps;
-  font-size: 1.2em;
+  font-size: 1.1em;
 }
 
 .template {
